# timp-lab-1

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/scripts/: lint.sh
backend/src/: api.py  cruds.py  database.py  main.py  models.py  schemas.py  security.py  services.py  settings.py  tests.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/features/auth/: AuthForms.tsx  api.ts  hooks.ts  index.ts  types.ts
frontend/src/features/posts/: PostModule.tsx  api.ts  index.ts  types.ts
frontend/src/routes/: index.tsx
frontend/src/types/: index.ts
